# AudioEditor

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  todo.txt
cmake/: FindFFmpeg.cmake  FindPortAudio.cmake  FindSndFile.cmake
src/: app.cpp  app.h  audio_buffer.cpp  audio_buffer.h  audio_interface.cpp  audio_interface.h  audiobuffer.cpp  audiobuffer.h  audiointerface.cpp  audiointerface.h  ffmpeg_wrapper.h  file_io.cpp  file_io.h  waveform_cache.cpp  waveform_cache.h  waveformvisual.cpp  waveformvisual.h
src/gui/: audio_widget.cpp  audio_widget.h  audiowidget.cpp  audiowidget.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h  settings.ui
